react-app/src/components/Subreddit/css/index.css
.subreddit-outer-container {
	margin: auto;
	/* width: 80%; */
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	margin-bottom: 100px;
	max-width: 100%;
}

.subreddit-inner-container {
	display: flex;
	justify-content: center;
	flex-direction: row;
	width: fit-content;
	margin-top: 20px;
	gap: 20px;
	width: 70%;
}

.subreddit-posts {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	width: 100%;
	max-width: 640px;
	row-gap: 15px;
}

.subreddit-banner {
	width: 100%;
	max-width: 100%;
	box-sizing: border-box;
}

.banner {
	width: 100%;
	max-width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}
.banner-image-placeholder {
	width: 100%;
	height: 80px;
	background-color: rgb(51, 168, 255);
}

.banner-image {
	height: 80px;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: rgb(51, 168, 255);
	font-size: 40px;
	font-family: "IBM Plex Sans Bold", sans-serif;
}

.banner-title-container {
	background-color: white;
	height: 78px;
	width: 100%;
	box-sizing: border-box;
	padding-left: 10%;
	display: flex;
	align-items: center;
	gap: 30px;
}

.banner-title {
	height: 78px;
	/* background-color: aqua; */
	/* width: fit-content; */
	position: relative;
}

.sub-icon {
	width: 72px;
	height: 72px;
	/* color: rgb(52, 119, 204); */
	fill: rgb(0, 121, 211);
	position: absolute;
	top: -20px;
	border: solid 4px white;
	border-radius: 9999px;
	background-color: white;
	box-sizing: border-box;
}

.title-name {
	margin-left: 90px;
}

.sub-display-name {
	font-weight: bold;
	font-size: 28px;
}

.sub-name {
	font-size: 14px;
	color: #7c7c7c;
}

.subreddit-info-card {
	width: 310px;
	min-width: 310px;

	height: fit-content;
	border: solid 1px rgb(204, 204, 204);
	border-radius: 4px;
}

.subreddit-info-card-top {
	padding: 12px 12px 12px 12px;
	background-color: rgb(0, 121, 211);
	color: white;
	display: flex;
	justify-content: space-between;
	align-items: center;
	font-size: 14px;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
}

.mod-tools-container {
	display: flex;
	justify-content: center;
	align-items: center;
	cursor: pointer;
	padding: 3px;
	border-radius: 4px;
	color: white;
}

.mod-tools-container:hover {
	background-color: rgba(0, 0, 0, 0.2);
}

.subreddit-info-card-info,
.subreddit-info-card-rules,
.subreddit-info-card-moderator {
	background-color: white;
	height: 100%;
	padding: 12px;
	display: flex;
	flex-direction: column;
	gap: 10px;
	border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;
}

.subreddit-description {
	font-size: 14px;
	white-space: pre-wrap;
	word-break: break-all;
}

.subreddit-stats {
	padding: 5px;
}

.members-num {
	font-size: 16px;
}
.members-text {
	font-size: 12px;
}

.subreddit-created-at {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	/* padding: 10px; */
	padding-top: 10px;
	border-top: solid 1px rgb(204, 204, 204);
}

.fa-cake-candles,
.fa-shield {
	margin: 0px;
	margin-right: 5px;
	padding: 0px;
	display: flex;
	justify-content: center;
	align-items: center;
}
.fa-shield {
	font-size: 20px;
}
.sub-post-container {
	border: solid 1px rgb(204, 204, 204);
	background-color: white;
	border-radius: 4px;
	display: flex;
	min-height: 140px;
	min-width: 640px;
	width: 100%;
	border-radius: 4px;
}

.sub-post-info-container {
	display: flex;
	justify-content: space-between;
	width: 90%;
}

.sub-post-info {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	padding: 10px;
	box-sizing: border-box;
	width: 100%;
}

.votes-container {
	width: 40px;
	min-height: 72px;
	min-width: 40px;
	display: flex;

	justify-content: flex-start;
	padding-top: 10px;
	box-sizing: border-box;
	border-top-left-radius: 4px;
	border-bottom-left-radius: 4px;
}

.fa-arrow-down,
.fa-arrow-up,
.votes {
	padding: 0px;
	margin: 0px;
}

.subreddit-info {
	display: flex;
	gap: 20px;
	flex-direction: column;
}

.image-box-subreddit {
	max-width: 100%;
	/* width: 100%; */
	max-height: 254px;
}

.sub-image-link {
	display: flex;
	justify-content: center;
	align-items: center;
}

.sub-post-title {
	max-width: 90%;
	word-wrap: break-word;
	font-family: "IBM Plex Sans Medium", sans-serif;
	font-size: 18px;
	font-weight: 500;
}

.sub-text-box {
	padding-left: 10px;
	padding-top: 10px;
	max-width: 100%;
	word-wrap: break-word;
	max-height: 300px;
	overflow: hidden;
	font-size: 14px;
	word-wrap: break-word;
}

.sub-post-text {
	margin-left: 5px;
	margin-bottom: 10px;
	display: flex;
	flex-direction: column;
	word-wrap: break-word;
	max-width: 100%;
	gap: 5px;
}

.sub-post-time.subreddit {
	font-size: 12px;
	font-family: "IBM Plex Sans Bold", sans-serif;
}

.sub-post-time.username {
	font-family: "IBM Plex Sans", sans-serif;
	font-size: 12px;
	color: rgb(155, 155, 155);
}
.subreddit:hover,
.username:hover {
	text-decoration: underline;
}

.empty-post-main {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	/* width: 640px; */
	width: 100%;
	/* min-width: 100%; */
	min-width: 640px;
	max-width: 640px;
	position: relative;
}
.empty-post-container {
	height: 88px;
	width: 100%;
	background-color: rgba(255, 255, 255, 0.8);
	border: solid 1px rgb(204, 204, 204);
	border-radius: 2px;
	color: rgb(230, 230, 230);
	max-width: 640px;
}

.empty-votes {
	display: flex;
	height: 100%;
	width: fit-content;
	flex-direction: column;
	justify-content: space-between;
	padding: 10px;
	box-sizing: border-box;
	border: solid 1px rgba(135, 138, 140, 0.05);
}

.empty-post-text-container-flex {
	position: absolute;
	background-color: rgba(131, 132, 133, 0.039);
	width: 100%;
	height: 100%;
	max-width: 640px;
	display: flex;
	justify-content: center;
}

.empty-post-text {
	padding-top: 75px;
	display: flex;
	flex-direction: column;
	/* justify-content: center; */
	align-items: center;
	text-align: center;
}

.empty-post-big-text {
	font-size: 20px;
	margin-bottom: 20px;
}

.empty-post-small-text {
	margin-bottom: 15px;
}

.loading-posts {
	display: flex;
	flex-direction: column;
	gap: 10px;
	width: fit-content;
	max-width: fit-content;
}

.loading-post-container {
	width: 640px;
	height: 500px;
	box-sizing: border-box;
	border: solid 1px rgb(168, 168, 168);
	background-color: white;
	border-radius: 4px;
	display: flex;
}

.loading-arrow {
	color: grey;
}

.loading-right {
	display: flex;
	flex-direction: column;
	gap: 10px;
	padding: 10px;
}

.loading-top {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.loading-header {
	height: 20px;
	background-color: grey;
	width: 200px;
	border-radius: 9999px;
}
.loading-subheader {
	height: 20px;
	background-color: grey;
	width: 350px;
	border-radius: 9999px;
}

.loading-post {
	height: 350px;
	background-color: darkgrey;
	width: 500px;
	border-radius: 4px;
}

.loading-interactions {
	height: 10px;
	background-color: grey;
	width: 350px;
	border-radius: 9999px;
}

.loading-header,
.loading-subheader,
.loading-post,
.loading-interactions {
	animation-name: gradient;
	animation-duration: 0.3s;
	animation-timing-function: linear;
	animation-iteration-count: infinite;
	animation-direction: alternate;
}

.subreddit-url {
	color: rgb(51, 168, 255);
	max-width: 100%;
	white-space: pre-wrap;
	word-break: break-all;
	display: flex;
	gap: 5px;
}

.subreddit-url:hover {
	text-decoration: underline;
}
.sub-rule-title {
	white-space: pre-wrap;
	word-break: break-all;
}

.has-rule-detail {
	cursor: pointer;
}

.has-rule-detail:hover {
	color: rgb(51, 168, 255);
}

.sub-rule-detail {
	padding: 10px;
	white-space: pre-wrap;
	word-break: break-all;
	color: #7c7c7c;
}

.moderator-name {
	white-space: pre-wrap;
	word-break: break-all;
}

.moderator-name:hover {
	text-decoration: underline;
}

h1 {
	padding: 0px;
	margin: 0px;
}

@keyframes gradient {
	0% {
		background-color: rgb(228, 226, 226);
	}
	100% {
		background-color: rgb(236, 232, 232);
	}
}

@media screen and (max-width: 1000px) {
	.subreddit-inner-container {
		width: 100vw;
		max-width: 100vw;
		flex-direction: column-reverse;
		margin-top: 0px;
		gap: 5px;
	}

	.subreddit-posts {
		width: 100vw;
		max-width: 100vw;
	}

	.sub-post-container {
		width: 100%;
		max-width: 100vw;
	}
	.subreddit-info {
		width: 100vw;
	}
	.subreddit-info-card {
		width: 100vw;
	}

	.subreddit-info-card:not(:first-child) {
		display: none;
	}
	.info-card-created {
		display: none;
	}

	.single-post-sub-info-container > .subreddit-info {
		display: none;
	}

	.subreddit-loading {
		width: 100vw;
	}

	.loading-post-container {
		width: 100vw;
	}
	.loading-right {
		width: 100%;
		max-width: 100%;
		padding: 0px;
		padding-top: 10px;
	}
	.loading-top {
		max-width: 100%;
		width: 100%;
	}

	.loading-post {
		width: 95%;
	}

	.loading-subheader {
		max-width: 95%;
	}

	.loading-interactions {
		max-width: 95%;
	}

	.empty-post-main,
	.empty-post-container,
	.empty-post-text-container-flex {
		width: 100vw;
		max-width: 100vw;
	}
}

